-- Create and populate a normalised scenario lookup table.
--
-- This script treats dataset_case.scenario as the exact source text.
-- It preserves dataset_case.scenario as raw imported text and adds dataset_case.scenario_id
-- as the resolved relational reference.

create table if not exists scenario (
    scenario_id integer generated by default as identity primary key,
    scenario_hash text not null,
    name text not null,
    scenario_text text not null,
    description text,
    source_name text,
    source_reference text,
    source_uri text,
    source_file_id integer references source_file(source_file_id) on delete set null,
    created_at timestamptz not null default now(),
    updated_at timestamptz not null default now(),

    constraint scenario_name_not_blank check (length(trim(name)) > 0),
    constraint scenario_text_not_blank check (length(trim(scenario_text)) > 0),
    constraint scenario_hash_matches_text check (scenario_hash = md5(scenario_text))
);

create unique index if not exists ux_scenario_hash
    on scenario (scenario_hash);

create index if not exists ix_scenario_source_file_id
    on scenario (source_file_id);

create or replace function set_updated_at()
returns trigger
language plpgsql
as $$
begin
    new.updated_at = now();
    return new;
end;
$$;

drop trigger if exists trg_scenario_set_updated_at on scenario;

create trigger trg_scenario_set_updated_at
before update on scenario
for each row
execute function set_updated_at();

with distinct_scenarios as (
    select
        trim(dc.scenario::text) as scenario_text,
        min(dc.source_file_id) as source_file_id,
        count(*) as dataset_case_count
    from dataset_case dc
    where dc.scenario is not null
      and length(trim(dc.scenario::text)) > 0
    group by trim(dc.scenario::text)
), prepared as (
    select
        md5(scenario_text) as scenario_hash,
        left(regexp_replace(scenario_text, '\s+', ' ', 'g'), 120) as name,
        scenario_text,
        null::text as description,
        'dataset_case'::text as source_name,
        'dataset_case.scenario'::text as source_reference,
        null::text as source_uri,
        source_file_id
    from distinct_scenarios
)
insert into scenario (
    scenario_hash,
    name,
    scenario_text,
    description,
    source_name,
    source_reference,
    source_uri,
    source_file_id
)
select
    scenario_hash,
    name,
    scenario_text,
    description,
    source_name,
    source_reference,
    source_uri,
    source_file_id
from prepared
on conflict (scenario_hash) do update
set
    scenario_text = excluded.scenario_text,
    source_file_id = coalesce(scenario.source_file_id, excluded.source_file_id),
    source_name = coalesce(scenario.source_name, excluded.source_name),
    source_reference = coalesce(scenario.source_reference, excluded.source_reference),
    source_uri = coalesce(scenario.source_uri, excluded.source_uri),
    updated_at = now();

alter table dataset_case
    add column if not exists scenario_id integer;

do $$
begin
    if not exists (
        select 1
        from pg_constraint
        where conname = 'fk_dataset_case_scenario'
    ) then
        alter table dataset_case
            add constraint fk_dataset_case_scenario
            foreign key (scenario_id)
            references scenario(scenario_id)
            on delete set null;
    end if;
end $$;

create index if not exists ix_dataset_case_scenario_id
    on dataset_case (scenario_id);

update dataset_case dc
set scenario_id = s.scenario_id
from scenario s
where dc.scenario is not null
  and length(trim(dc.scenario::text)) > 0
  and md5(trim(dc.scenario::text)) = s.scenario_hash
  and dc.scenario_id is distinct from s.scenario_id;
