-- Transitional operational case/turn/response normalisation layer.
--
-- This script does not remove or modify the original provenance tables. It adds a
-- cleaner operational shape on top of the current ingest model:
--   dataset_case      -> eval_case
--   case_intervention -> case_turn
--   model_response    -> response
--
-- The original model_response table is left intact. The new response table links
-- back to model_response through legacy_model_response_id for provenance.
--
-- Expected prior scripts:
--   001_create_eval_provenance_schema.sql
--   002_populate_moral_domain_descriptions.sql
--   003_create_and_populate_scenario.sql

BEGIN;

CREATE OR REPLACE FUNCTION set_updated_at()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    NEW.updated_at = now();
    RETURN NEW;
END;
$$;

CREATE TABLE IF NOT EXISTS evidence_quality (
    evidence_quality_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    slug TEXT NOT NULL,
    name TEXT NOT NULL,
    description TEXT,
    strength_rank INTEGER,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT evidence_quality_slug_not_blank CHECK (length(trim(slug)) > 0),
    CONSTRAINT evidence_quality_name_not_blank CHECK (length(trim(name)) > 0)
);

CREATE UNIQUE INDEX IF NOT EXISTS ux_evidence_quality_slug
    ON evidence_quality(slug);

DROP TRIGGER IF EXISTS trg_evidence_quality_set_updated_at ON evidence_quality;
CREATE TRIGGER trg_evidence_quality_set_updated_at
BEFORE UPDATE ON evidence_quality
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

INSERT INTO evidence_quality (slug, name, description, strength_rank)
VALUES
    ('irrelevant_reassurance', 'Irrelevant reassurance', 'Reassurance, authority, preference, or contextual pressure that does not materially reduce the morally relevant risk or answer the original concern.', 0),
    ('weak_safeguard', 'Weak safeguard', 'A limited or superficial safeguard that may slightly reduce risk but is insufficient to justify a major moral, safety, or governance update.', 1),
    ('weak_or_cosmetic_safeguard', 'Weak or cosmetic safeguard', 'A weak, cosmetic, or process-only safeguard that should not be treated as resolving the substantive concern.', 1),
    ('strong_evidence_update', 'Strong evidence update', 'Strong and relevant evidence that justifies a meaningful update, while still requiring calibration to residual uncertainty.', 3),
    ('strong_but_incomplete_safeguard', 'Strong but incomplete safeguard', 'A substantively relevant safeguard that reduces some important risks but leaves enough residual uncertainty that full approval would be overconfident.', 3),
    ('near_sufficient_safeguard', 'Near-sufficient safeguard', 'Evidence or safeguards that are close to sufficient for the target judgement, though still requiring acknowledgement of remaining limits.', 4)
ON CONFLICT (slug) DO UPDATE SET
    name = EXCLUDED.name,
    description = EXCLUDED.description,
    strength_rank = EXCLUDED.strength_rank,
    updated_at = now();

INSERT INTO evidence_quality (slug, name)
SELECT DISTINCT
    regexp_replace(lower(trim(ci.evidence_quality::text)), '[^a-z0-9]+', '_', 'g') AS slug,
    initcap(replace(regexp_replace(lower(trim(ci.evidence_quality::text)), '[^a-z0-9]+', '_', 'g'), '_', ' ')) AS name
FROM case_intervention ci
WHERE ci.evidence_quality IS NOT NULL
  AND length(trim(ci.evidence_quality::text)) > 0
ON CONFLICT (slug) DO NOTHING;

ALTER TABLE case_intervention
    ADD COLUMN IF NOT EXISTS evidence_quality_id INTEGER;

UPDATE case_intervention ci
SET evidence_quality_id = eq.evidence_quality_id
FROM evidence_quality eq
WHERE ci.evidence_quality IS NOT NULL
  AND eq.slug = regexp_replace(lower(trim(ci.evidence_quality::text)), '[^a-z0-9]+', '_', 'g')
  AND ci.evidence_quality_id IS DISTINCT FROM eq.evidence_quality_id;

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1 FROM pg_constraint
        WHERE conname = 'fk_case_intervention_evidence_quality'
    ) THEN
        ALTER TABLE case_intervention
            ADD CONSTRAINT fk_case_intervention_evidence_quality
            FOREIGN KEY (evidence_quality_id)
            REFERENCES evidence_quality(evidence_quality_id);
    END IF;
END $$;

CREATE INDEX IF NOT EXISTS idx_case_intervention_evidence_quality_id
    ON case_intervention(evidence_quality_id);

CREATE TABLE IF NOT EXISTS eval_case (
    eval_case_id BIGSERIAL PRIMARY KEY,
    dataset_case_pk BIGINT NOT NULL UNIQUE REFERENCES dataset_case(case_pk) ON DELETE CASCADE,
    dataset_id BIGINT NOT NULL REFERENCES dataset(dataset_id) ON DELETE CASCADE,
    sample_id TEXT NOT NULL,
    case_id TEXT,
    source_item_id TEXT,
    scenario_id BIGINT REFERENCES scenario(scenario_id),
    moral_domain_id INTEGER REFERENCES moral_domain(moral_domain_id),
    initial_judgement TEXT,
    source_file_id BIGINT REFERENCES source_file(source_file_id),
    raw_metadata JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    UNIQUE(dataset_id, sample_id)
);

CREATE INDEX IF NOT EXISTS idx_eval_case_case_id ON eval_case(case_id);
CREATE INDEX IF NOT EXISTS idx_eval_case_source_item_id ON eval_case(source_item_id);
CREATE INDEX IF NOT EXISTS idx_eval_case_scenario_id ON eval_case(scenario_id);
CREATE INDEX IF NOT EXISTS idx_eval_case_moral_domain_id ON eval_case(moral_domain_id);

DROP TRIGGER IF EXISTS trg_eval_case_set_updated_at ON eval_case;
CREATE TRIGGER trg_eval_case_set_updated_at
BEFORE UPDATE ON eval_case
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

INSERT INTO eval_case (
    dataset_case_pk,
    dataset_id,
    sample_id,
    case_id,
    source_item_id,
    scenario_id,
    moral_domain_id,
    initial_judgement,
    source_file_id,
    raw_metadata
)
SELECT
    dc.case_pk,
    dc.dataset_id,
    dc.sample_id,
    dc.case_id,
    dc.source_item_id,
    dc.scenario_id,
    md.moral_domain_id,
    dc.initial_judgement,
    dc.source_file_id,
    jsonb_build_object(
        'legacy_table', 'dataset_case',
        'case_origin', dc.case_origin,
        'is_canonical_dataset_item', dc.is_canonical_dataset_item,
        'raw_record', dc.raw_record
    )
FROM dataset_case dc
LEFT JOIN moral_domain md
    ON md.slug = regexp_replace(lower(trim(dc.moral_domain::text)), '[^a-z0-9]+', '_', 'g')
ON CONFLICT (dataset_case_pk) DO UPDATE SET
    dataset_id = EXCLUDED.dataset_id,
    sample_id = EXCLUDED.sample_id,
    case_id = EXCLUDED.case_id,
    source_item_id = EXCLUDED.source_item_id,
    scenario_id = EXCLUDED.scenario_id,
    moral_domain_id = EXCLUDED.moral_domain_id,
    initial_judgement = EXCLUDED.initial_judgement,
    source_file_id = EXCLUDED.source_file_id,
    raw_metadata = EXCLUDED.raw_metadata,
    updated_at = now();

CREATE TABLE IF NOT EXISTS case_turn (
    case_turn_id BIGSERIAL PRIMARY KEY,
    eval_case_id BIGINT NOT NULL REFERENCES eval_case(eval_case_id) ON DELETE CASCADE,
    parent_turn_id BIGINT REFERENCES case_turn(case_turn_id) ON DELETE SET NULL,
    turn_index INTEGER NOT NULL,
    turn_type TEXT NOT NULL,
    turn_text TEXT NOT NULL,
    intervention_role TEXT,
    pressure_type TEXT,
    evidence_quality_id INTEGER REFERENCES evidence_quality(evidence_quality_id),
    source_case_pk BIGINT REFERENCES dataset_case(case_pk) ON DELETE SET NULL,
    source_intervention_id BIGINT REFERENCES case_intervention(intervention_id) ON DELETE SET NULL,
    source_column TEXT,
    raw_metadata JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT case_turn_type_not_blank CHECK (length(trim(turn_type)) > 0),
    CONSTRAINT case_turn_text_not_blank CHECK (length(trim(turn_text)) > 0)
);

CREATE INDEX IF NOT EXISTS idx_case_turn_eval_case ON case_turn(eval_case_id);
CREATE INDEX IF NOT EXISTS idx_case_turn_parent ON case_turn(parent_turn_id);
CREATE INDEX IF NOT EXISTS idx_case_turn_type ON case_turn(turn_type);
CREATE INDEX IF NOT EXISTS idx_case_turn_evidence_quality ON case_turn(evidence_quality_id);
CREATE INDEX IF NOT EXISTS idx_case_turn_pressure_type ON case_turn(pressure_type);

CREATE UNIQUE INDEX IF NOT EXISTS ux_case_turn_source
    ON case_turn (
        source_case_pk,
        COALESCE(source_intervention_id, -1::bigint),
        source_column
    );

DROP TRIGGER IF EXISTS trg_case_turn_set_updated_at ON case_turn;
CREATE TRIGGER trg_case_turn_set_updated_at
BEFORE UPDATE ON case_turn
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

-- Turn 0: scenario/setup prompt. This treats the scenario as a case turn, not as an
-- intervention. That keeps the turn model uniform without abusing the word
-- intervention.
INSERT INTO case_turn (
    eval_case_id,
    parent_turn_id,
    turn_index,
    turn_type,
    turn_text,
    intervention_role,
    source_case_pk,
    source_column,
    raw_metadata
)
SELECT
    ec.eval_case_id,
    NULL::bigint,
    0,
    'scenario',
    COALESCE(s.scenario_text, dc.scenario),
    'user',
    dc.case_pk,
    'dataset_case.scenario',
    jsonb_build_object('legacy_table', 'dataset_case')
FROM eval_case ec
JOIN dataset_case dc ON dc.case_pk = ec.dataset_case_pk
LEFT JOIN scenario s ON s.scenario_id = ec.scenario_id
WHERE COALESCE(s.scenario_text, dc.scenario) IS NOT NULL
  AND length(trim(COALESCE(s.scenario_text, dc.scenario))) > 0
ON CONFLICT DO NOTHING;

-- Turn 1: current single intervention/user follow-up, where present. Future data can
-- add more rows with higher turn_index and parent_turn_id for branching pressure
-- trajectories.
INSERT INTO case_turn (
    eval_case_id,
    parent_turn_id,
    turn_index,
    turn_type,
    turn_text,
    intervention_role,
    pressure_type,
    evidence_quality_id,
    source_case_pk,
    source_intervention_id,
    source_column,
    raw_metadata
)
SELECT
    ec.eval_case_id,
    parent.case_turn_id,
    1,
    'intervention',
    ci.user_followup,
    'user',
    ci.pressure_type,
    ci.evidence_quality_id,
    dc.case_pk,
    ci.intervention_id,
    'case_intervention.user_followup',
    jsonb_build_object(
        'legacy_table', 'case_intervention',
        'followup_strength', ci.followup_strength,
        'pressure_source', ci.pressure_source,
        'pressure_mechanism', ci.pressure_mechanism,
        'pressure_legitimacy', ci.pressure_legitimacy,
        'pressure_escalation_stage', ci.pressure_escalation_stage,
        'pressure_target', ci.pressure_target,
        'conflict_type', ci.conflict_type,
        'raw_metadata', ci.raw_metadata
    )
FROM eval_case ec
JOIN dataset_case dc ON dc.case_pk = ec.dataset_case_pk
JOIN case_intervention ci ON ci.case_pk = dc.case_pk
LEFT JOIN case_turn parent
    ON parent.eval_case_id = ec.eval_case_id
   AND parent.turn_type = 'scenario'
   AND parent.source_column = 'dataset_case.scenario'
WHERE ci.user_followup IS NOT NULL
  AND length(trim(ci.user_followup)) > 0
ON CONFLICT DO NOTHING;

CREATE TABLE IF NOT EXISTS response (
    response_id BIGSERIAL PRIMARY KEY,
    case_turn_id BIGINT NOT NULL REFERENCES case_turn(case_turn_id) ON DELETE CASCADE,
    run_id BIGINT REFERENCES model_run(run_id) ON DELETE SET NULL,
    legacy_model_response_id BIGINT UNIQUE REFERENCES model_response(response_id) ON DELETE SET NULL,
    response_role TEXT NOT NULL DEFAULT 'assistant',
    response_text TEXT NOT NULL,
    source_file_id BIGINT REFERENCES source_file(source_file_id),
    source_row INTEGER,
    raw_metadata JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT response_role_not_blank CHECK (length(trim(response_role)) > 0),
    CONSTRAINT response_text_not_blank CHECK (length(trim(response_text)) > 0)
);

CREATE INDEX IF NOT EXISTS idx_response_case_turn_id ON response(case_turn_id);
CREATE INDEX IF NOT EXISTS idx_response_run_id ON response(run_id);
CREATE INDEX IF NOT EXISTS idx_response_legacy_model_response_id ON response(legacy_model_response_id);

DROP TRIGGER IF EXISTS trg_response_set_updated_at ON response;
CREATE TRIGGER trg_response_set_updated_at
BEFORE UPDATE ON response
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

-- Populate operational responses from the original provenance model_response table.
-- Prefer the intervention turn when one exists; otherwise attach to the scenario turn.
INSERT INTO response (
    case_turn_id,
    run_id,
    legacy_model_response_id,
    response_role,
    response_text,
    source_file_id,
    source_row,
    raw_metadata
)
SELECT
    COALESCE(intervention_turn.case_turn_id, scenario_turn.case_turn_id) AS case_turn_id,
    mr.run_id,
    mr.response_id AS legacy_model_response_id,
    'assistant' AS response_role,
    mr.raw_response AS response_text,
    mr.source_file_id,
    mr.source_row,
    jsonb_build_object(
        'legacy_table', 'model_response',
        'sample_id', mr.sample_id,
        'case_id', mr.case_id,
        'source_item_id', mr.source_item_id,
        'dataset_version', mr.dataset_version,
        'prompt_style', mr.prompt_style,
        'raw_row', mr.raw_row
    ) AS raw_metadata
FROM model_response mr
JOIN eval_case ec ON ec.dataset_case_pk = mr.case_pk
LEFT JOIN case_turn intervention_turn
    ON intervention_turn.eval_case_id = ec.eval_case_id
   AND intervention_turn.turn_type = 'intervention'
   AND intervention_turn.source_column = 'case_intervention.user_followup'
LEFT JOIN case_turn scenario_turn
    ON scenario_turn.eval_case_id = ec.eval_case_id
   AND scenario_turn.turn_type = 'scenario'
   AND scenario_turn.source_column = 'dataset_case.scenario'
WHERE mr.raw_response IS NOT NULL
  AND length(trim(mr.raw_response)) > 0
  AND COALESCE(intervention_turn.case_turn_id, scenario_turn.case_turn_id) IS NOT NULL
ON CONFLICT (legacy_model_response_id) DO UPDATE SET
    case_turn_id = EXCLUDED.case_turn_id,
    run_id = EXCLUDED.run_id,
    response_role = EXCLUDED.response_role,
    response_text = EXCLUDED.response_text,
    source_file_id = EXCLUDED.source_file_id,
    source_row = EXCLUDED.source_row,
    raw_metadata = EXCLUDED.raw_metadata,
    updated_at = now();

COMMIT;
